<resources>
    <string name="app_name">SWIFT</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="busiName">Business Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Street address</string>
    <string name="state">City</string>
    <string name="zipcode">Zipcode</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="createuser">No account yet?<font color='#01C6DB'>Create one</font></string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="alreadyuser">Already have an account? <font color='#01C6DB'>Login</font></string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>

</resources>
