<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/registered_emailid"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/registered_emailid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@android:color/black"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/backToLoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/forgot_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:padding="5dp"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/loadingProgressBar"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-4dp"
        android:foregroundGravity="bottom"
        android:indeterminate="true"
        android:padding="0dp"
        style="?android:attr/progressBarStyleLarge" />

</LinearLayout>