<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@mipmap/ic_launcher"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Email" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Password"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="8dp" >

            <CheckBox
                android:id="@+id/show_hide_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_pwd"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/forgot"
                android:textColor="@color/black"
                android:textSize="14sp" />


        </LinearLayout>



        <Button
            android:id="@+id/loginBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:text="@string/login"
            android:textColor="#009688"
            android:textSize="17sp"
            android:textStyle="bold" />


        <TextView android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/createuser"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:textSize="16dip"/>


        <ProgressBar
            android:visibility="gone"
            android:id="@+id/loadingProgressBar"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-4dp"
            android:foregroundGravity="bottom"
            android:indeterminate="true"
            android:padding="0dp"
            style="?android:attr/progressBarStyleLarge" />

    </LinearLayout>

</RelativeLayout>